--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@suku-kahanamoku/mongoose-module",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Mongoose module",
   "repository": "@suku-kahanamoku/mongoose-module",
   "license": "MIT",
@@ -23,11 +23,11 @@
     "dist"
   ],
   "scripts": {
-    "prepack": "nuxt-module-build build",
+    "prepack": "nuxt-module-build build --failOnWarn=false",
     "dev": "npm run dev:prepare && nuxi dev playground",
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
-    "release": "npm run lint && npm run test && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
+    "release": "npm run test && npm run prepack && changelogen --release && npm publish --access public && git push --follow-tags",
     "lint": "eslint .",
     "test": "vitest run",
     "test:watch": "vitest watch",
