--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     ".": {
       "types": "./dist/types.d.mts",
       "import": "./dist/module.mjs"
+    },
+    "./server-utils": {
+      "types": "./dist/runtime/server/utils/index.d.ts",
+      "import": "./dist/runtime/server/utils/index.js"
     }
   },
   "main": "./dist/module.mjs",
