--- a/package.json
+++ b/package.json
@@ -7,12 +7,8 @@
   "type": "module",
   "exports": {
     ".": {
-      "types": "./dist/types.d.mts",
+      "types": "./dist/runtime/types.d.ts",
       "import": "./dist/module.mjs"
-    },
-    "./types": {
-      "types": "./dist/types.d.mts",
-      "import": "./dist/types.d.mts"
     },
     "./server-utils": {
       "types": "./dist/runtime/server/utils/index.d.ts",
