--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "exports": {
     ".": {
-      "types": "./dist/runtime/types.d.ts",
+      "types": "./dist/types.d.mts",
       "import": "./dist/module.mjs"
     },
     "./server-utils": {
